Wrapped console.log in ba-core with a conditional to resolve IE8/IE9 bug. Pagination alignment fix.

--- a/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
@@ -1385,7 +1385,8 @@ span.weee {
   margin-bottom: 15px;
   padding: 5px 0 0 0;
   position: relative;
-  height: 55px; }
+  height: 55px;
+  text-align: center; }
   .toolbar:after {
     content: '';
     display: table;
@@ -1518,10 +1519,7 @@ span.weee {
 .pages {
   overflow: hidden;
   text-align: center;
-  width: 530px;
-  padding-left: 185px;
-  padding-right: 144px;
-  margin: 0 auto; }
+  display: inline-block; }
   .pages strong {
     display: none; }
 
